[gd_scene load_steps=5 format=3 uid="uid://wgiuyjr6bltu"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_ifnbb"]
[ext_resource type="Script" path="res://Scenes/TopLevel/Scripts/scene_scroller.gd" id="1_vdmet"]
[ext_resource type="PackedScene" uid="uid://caksmi57k4y3t" path="res://Scenes/HistoryPage/history_screen.tscn" id="2_3rsnc"]
[ext_resource type="PackedScene" uid="uid://5vm2iatgmrxs" path="res://Scenes/SimpleRollPage/simple_roll.tscn" id="3_21u8g"]

[node name="SceneScroller" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_ifnbb")
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0
script = ExtResource("1_vdmet")

[node name="ScrollSnapTimer" type="Timer" parent="."]

[node name="SceneContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ifnbb")

[node name="HistoryScreen" parent="SceneContainer" instance=ExtResource("2_3rsnc")]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1

[node name="SimpleRoll" parent="SceneContainer" instance=ExtResource("3_21u8g")]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_ifnbb")

[connection signal="scroll_ended" from="." to="." method="_on_scroll_ended"]
